- Replace "new Integer()" with more efficient "Integer.valueOf()".  Similarily   do the same for Long, Float, Short, Double, Byte, and Boolean Issue number: Obtained from: Submitted by: Reviewed by:
Original author: kchung
Date: 2006-10-06 22:12:28+00:00

svn path=/trunk/; revision=595