@@ -32,7 +32,7 @@ import com.sun.el.util.MessageFactory;
 /**
  * A helper class of Arithmetic defined by the EL Specification
  * @author Jacob Hookom [jacob@hookom.net]
- * @version $Change: 181177 $$DateTime: 2001/06/26 08:45:09 $$Author: dpatil $
+ * @version $Change: 181177 $$DateTime: 2001/06/26 08:45:09 $$Author: kchung $
  */
 public abstract class ELArithmetic {
 
@@ -64,7 +64,7 @@ public abstract class ELArithmetic {
         }
 
         protected Number mod(Number num0, Number num1) {
-            return new Double(num0.doubleValue() % num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() % num1.doubleValue());
         }
 
         protected Number multiply(Number num0, Number num1) {
@@ -122,7 +122,7 @@ public abstract class ELArithmetic {
         	} else if (num1 instanceof BigDecimal) {
         		return ((new BigDecimal(num0.doubleValue()).add((BigDecimal) num1)));
         	}
-            return new Double(num0.doubleValue() + num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() + num1.doubleValue());
         }
 
         protected Number coerce(Number num) {
@@ -130,19 +130,19 @@ public abstract class ELArithmetic {
                 return num;
             if (num instanceof BigInteger)
             	return new BigDecimal((BigInteger) num);
-            return new Double(num.doubleValue());
+            return Double.valueOf(num.doubleValue());
         }
 
         protected Number coerce(String str) {
-            return new Double(str);
+            return Double.valueOf(str);
         }
 
         protected Number divide(Number num0, Number num1) {
-            return new Double(num0.doubleValue() / num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() / num1.doubleValue());
         }
 
         protected Number mod(Number num0, Number num1) {
-            return new Double(num0.doubleValue() % num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() % num1.doubleValue());
         }
 
         protected Number subtract(Number num0, Number num1) {
@@ -152,7 +152,7 @@ public abstract class ELArithmetic {
         	} else if (num1 instanceof BigDecimal) {
         		return ((new BigDecimal(num0.doubleValue()).subtract((BigDecimal) num1)));
         	}
-            return new Double(num0.doubleValue() - num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() - num1.doubleValue());
         }
 
         protected Number multiply(Number num0, Number num1) {
@@ -162,7 +162,7 @@ public abstract class ELArithmetic {
         	} else if (num1 instanceof BigDecimal) {
         		return ((new BigDecimal(num0.doubleValue()).multiply((BigDecimal) num1)));
         	}
-            return new Double(num0.doubleValue() * num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() * num1.doubleValue());
         }
 
         public boolean matches(Object obj0, Object obj1) {
@@ -181,33 +181,33 @@ public abstract class ELArithmetic {
     public final static class LongDelegate extends ELArithmetic {
 
         protected Number add(Number num0, Number num1) {
-            return new Long(num0.longValue() + num1.longValue());
+            return Long.valueOf(num0.longValue() + num1.longValue());
         }
 
         protected Number coerce(Number num) {
             if (num instanceof Long)
                 return num;
-            return new Long(num.longValue());
+            return Long.valueOf(num.longValue());
         }
 
         protected Number coerce(String str) {
-            return new Long(str);
+            return Long.valueOf(str);
         }
 
         protected Number divide(Number num0, Number num1) {
-            return new Long(num0.longValue() / num1.longValue());
+            return Long.valueOf(num0.longValue() / num1.longValue());
         }
 
         protected Number mod(Number num0, Number num1) {
-            return new Long(num0.longValue() % num1.longValue());
+            return Long.valueOf(num0.longValue() % num1.longValue());
         }
 
         protected Number subtract(Number num0, Number num1) {
-            return new Long(num0.longValue() - num1.longValue());
+            return Long.valueOf(num0.longValue() - num1.longValue());
         }
 
         protected Number multiply(Number num0, Number num1) {
-            return new Long(num0.longValue() * num1.longValue());
+            return Long.valueOf(num0.longValue() * num1.longValue());
         }
 
         public boolean matches(Object obj0, Object obj1) {
@@ -223,11 +223,11 @@ public abstract class ELArithmetic {
 
     public final static LongDelegate LONG = new LongDelegate();
 
-    private final static Long ZERO = new Long(0);
+    private final static Long ZERO = Long.valueOf(0);
 
     public final static Number add(final Object obj0, final Object obj1) {
         if (obj0 == null && obj1 == null) {
-            return new Long(0);
+            return Long.valueOf(0);
         }
 
         final ELArithmetic delegate;
@@ -248,7 +248,7 @@ public abstract class ELArithmetic {
 
     public final static Number mod(final Object obj0, final Object obj1) {
         if (obj0 == null && obj1 == null) {
-            return new Long(0);
+            return Long.valueOf(0);
         }
 
         final ELArithmetic delegate;
@@ -269,7 +269,7 @@ public abstract class ELArithmetic {
 
     public final static Number subtract(final Object obj0, final Object obj1) {
         if (obj0 == null && obj1 == null) {
-            return new Long(0);
+            return Long.valueOf(0);
         }
 
         final ELArithmetic delegate;
@@ -309,7 +309,7 @@ public abstract class ELArithmetic {
 
     public final static Number multiply(final Object obj0, final Object obj1) {
         if (obj0 == null && obj1 == null) {
-            return new Long(0);
+            return Long.valueOf(0);
         }
 
         final ELArithmetic delegate;
@@ -367,7 +367,7 @@ public abstract class ELArithmetic {
 
         Class objType = obj.getClass();
         if (Character.class.equals(objType) || Character.TYPE == objType) {
-            return coerce(new Short((short) ((Character) obj).charValue()));
+            return coerce(Short.valueOf((short) ((Character) obj).charValue()));
         }
 
         throw new IllegalArgumentException(MessageFactory.get("el.convert", obj,
