@@ -44,7 +44,7 @@ public class ELSupport {
 
     private final static ELSupport REF = new ELSupport();
 
-    private final static Long ZERO = new Long(0L);
+    private final static Long ZERO = Long.valueOf(0L);
 
     public final static void throwUnhandled(Object base, Object property)
             throws ELException {
@@ -224,13 +224,13 @@ public class ELSupport {
     protected final static Number coerceToNumber(final Number number,
             final Class type) throws IllegalArgumentException {
         if (Long.TYPE == type || Long.class.equals(type)) {
-            return new Long(number.longValue());
+            return Long.valueOf(number.longValue());
         }
         if (Double.TYPE == type || Double.class.equals(type)) {
-            return new Double(number.doubleValue());
+            return Double.valueOf(number.doubleValue());
         }
         if (Integer.TYPE == type || Integer.class.equals(type)) {
-            return new Integer(number.intValue());
+            return Integer.valueOf(number.intValue());
         }
         if (BigInteger.class.equals(type)) {
             if (number instanceof BigDecimal) {
@@ -246,13 +246,13 @@ public class ELSupport {
             return new BigDecimal(number.doubleValue());
         }
         if (Byte.TYPE == type || Byte.class.equals(type)) {
-            return new Byte(number.byteValue());
+            return Byte.valueOf(number.byteValue());
         }
         if (Short.TYPE == type || Short.class.equals(type)) {
-            return new Short(number.shortValue());
+            return Short.valueOf(number.shortValue());
         }
         if (Float.TYPE == type || Float.class.equals(type)) {
-            return new Float(number.floatValue());
+            return Float.valueOf(number.floatValue());
         }
 
         throw new IllegalArgumentException(MessageFactory.get("error.convert",
@@ -273,7 +273,7 @@ public class ELSupport {
 
         Class objType = obj.getClass();
         if (Character.class.equals(objType) || Character.TYPE == objType) {
-            return coerceToNumber(new Short((short) ((Character) obj)
+            return coerceToNumber(Short.valueOf((short) ((Character) obj)
                     .charValue()), type);
         }
 
@@ -453,7 +453,7 @@ public class ELSupport {
             if (Double.parseDouble(value) > Double.MAX_VALUE) {
                 return new BigDecimal(value);
             } else {
-                return new Double(value);
+                return Double.valueOf(value);
             }
         } catch (NumberFormatException e0) {
             return new BigDecimal(value);
@@ -462,10 +462,10 @@ public class ELSupport {
 
     public final static Number toNumber(final String value) {
         try {
-            return new Integer(Integer.parseInt(value));
+            return Integer.valueOf(Integer.parseInt(value));
         } catch (NumberFormatException e0) {
             try {
-                return new Long(Long.parseLong(value));
+                return Long.valueOf(Long.parseLong(value));
             } catch (NumberFormatException e1) {
                 return new BigInteger(value);
             }
